tests/ui/missing_template_attr.rs
use tera_template_macro::TeraTemplate;

#[derive(TeraTemplate, serde::Serialize)]
struct Smoke {
    hello: String
}

fn main() {}